--- a/server_config.json
+++ b/server_config.json
@@ -4,11 +4,11 @@
   },
   "inbound": {
     "protocol": "vmess",
-    "port": 443,
+    "port": 8888,
     "settings": {
       "clients": [
         {
-          "id": "ad806487-2d26-4636-98b6-ab85cc8521f7",
+          "id": "UUID",
           "alterId": 64
         }
       ]
