--- a/app.json
+++ b/app.json
@@ -1,19 +1,15 @@
 {
-  "name": "Direct network",
-  "description": "deploy Correct internet access to Heroku.",
-  "keywords": ["Direct", "network"],
+  "name": "chisel-heroku",
+  "description": "将CHISEL作为SOCKS5代理部署到Heroku。",
+  "keywords": ["chisel", "heroku"],
   "env": { 
-    "UUID": {
-       "description": "Vmess协议默认UUID，请输入自己的UUID",
-       "value": "ad806487-2d26-4636-98b6-ab85cc8521f7"
-     },
-    "V2RAY_RAY_BUFFER_SIZE": {
-       "description": "每个连接的缓存大小，单位MB",
-       "value": "10"
-     }
+    "CHISEL_AUTH": {
+      "description": "CHISEL的--auth选项，形式为<user：pass>。",
+      "value": "user:pass"
+    }
   },
-  "website": "https://github.com/fbigun/v2ray-heroku",
-  "repository": "https://github.com/fbigun/v2ray-heroku",
+  "website": "https://github.com/ap10001/c-h",
+  "repository": "https://github.com/ap10001/c-h",
   "stack": "container"
  }
  
